aks/app-gateway-4-containers/cluster-config/httpbin/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: httpbin-gateway
  annotations:
    alb.networking.azure.io/alb-id: "/subscriptions/ccfc5dda-43af-4b5e-8cc2-1dda18f2382e/resourceGroups/kangaroo-56526-aks_rg/providers/Microsoft.ServiceNetworking/trafficControllers/kangaroo-56526-alb"
spec:
  gatewayClassName: azure-alb-external
  listeners:
  - name: http-listener
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
  addresses:
  - type: alb.networking.azure.io/alb-frontend
    value: kangaroo-56526-alb-frontend
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-route
spec:
  parentRefs:
  - name: alb-gateway
  hostnames:
  - "httpbin.bjdazure.tech"
  rules:
    - backendRefs:
        - name: httpbinsvc
          port: 80
